# byte-stream-editor

./: .gitignore  ByteStreamEditor.cpp  ByteStreamEditor.hpp  CMakeLists.txt  Makefile  README.md  SequenceSM.cpp  SequenceSM.hpp  TCircleBuffer.hpp  main.cpp
rule/: test1.rule  ts.rule
